# VisionTools

./: .gitignore  README.md
MotionDetection/: CMakeLists.txt  MotionDetector.cpp  MotionDetector.h  README.md  main.cpp  params.h  prob_model.h
MultiHomographyStitch/: CMakeLists.txt  MultiHomographyStitch.cpp  MultiHomographyStitch.h  README.md  main.cpp
PrimeSenseCalib/cmake/: FindOpenNI.cmake~
RelativePoseSolver/: CMakeLists.txt  CalibStereo.h
RelativePoseSolver/data/: aligned.txt  itm.txt  pose2.txt  vicon.txt
absolute_orientation/: CalibStereo.cpp  relative_pose_solver.h  solve_relative_pose.cpp  test_absolute_orientation.cpp  test_relative_pose.cpp
absolute_orientation/data/: output.txt  output2.txt  pose1.txt
pwp/: CMakeLists.txt  README.md  main.cpp
pwp/pwp/: Histogram.hpp  PWPTracker.cpp  PWPTracker.hpp
